--- a/mm_muslim_support/pubspec.yaml
+++ b/mm_muslim_support/pubspec.yaml
@@ -34,10 +34,55 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  easy_localization: ^3.0.1
+  pull_to_refresh: ^2.0.0
+  go_router: ^14.1.4
+  flutter_bloc: ^8.1.6
+  equatable: ^2.0.5
+  shared_preferences: ^2.2.3
+  flutter_svg: ^2.0.10+1
+  device_info_plus: ^10.1.1
+  google_api_availability: 5.0.0
+  package_info_plus: ^8.0.1
+  intl: ^0.19.0
+  cryptography: ^2.7.0
+  path_provider: ^2.1.4
+  firebase_core: ^3.9.0
+  firebase_messaging: ^15.1.6
+  flutter_device_imei: ^0.0.2
+  shimmer: ^3.0.0
+  logger: ^2.4.0
+  url_launcher: ^6.3.0
+  latlong2: ^0.9.1
+  syncfusion_flutter_pdf: ^27.1.56
+  syncfusion_flutter_pdfviewer: ^27.1.56
+  permission_handler: ^11.3.1
+  syncfusion_flutter_gauges: ^27.2.2
+  sqflite: ^2.4.1
+  path: ^1.9.0
+  encrypt: ^5.0.3
+  dio: ^5.8.0+1
+  firebase_crashlytics: ^4.3.5
+  firebase_analytics: ^11.4.5
+  firebase_performance: ^0.10.1+5
+
+
+
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  # bloc test
+  bloc_test: ^9.1.7
+  mockito: ^5.4.4
+  build_runner:
+  # For mocking file related operations
+  plugin_platform_interface: ^2.1.8
+  path_provider_platform_interface: ^2.1.2
+  image_picker_platform_interface: ^2.10.0
+
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
