--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -41,22 +41,37 @@ jobs:
 
       # verifies if the dart code is formatted well
       # --set-exit-if-changed stops execution if the any code is not well formatted
-      # --output=none prints files which needs to be formatted
-      - name: Verify formatting
-        run: |
-          cd mm_muslim_support
-          dart format --output=none --set-exit-if-changed .
+#      # --output=none prints files which needs to be formatted
+#      - name: Verify formatting
+#        run: |
+#          cd mm_muslim_support
+#          dart format --output=none --set-exit-if-changed .
 
 
       # Checks for Symantic errors. Can be configured using analysis_options.yaml
       # --fatal-warnings stops execution if any warnings are found
-      - name: Analyze project source
-        run: |
-          cd mm_muslim_support
-          flutter analyze --fatal-warnings
+#      - name: Analyze project source
+#        run: |
+#          cd mm_muslim_support
+#          flutter analyze --fatal-warnings
           
       # Runs unit test
 #      - name: Run tests
 #        run: |
 #          cd mm_muslim_support
 #          flutter test
+
+      # Create android apk
+      - name: Build apk
+        run: |
+          cd mm_muslim_support
+          flutter build apk
+
+      # Upload apk to Firebase distribution
+      - name: Upload apk to Firebase distribution
+        uses: wzieba/Firebase-Distribution-Github-Action@v1.7.0
+        with:
+          appId: ${{ secrets.FIREBASE_APP_ID_ANDROID }}
+          serviceCredentialsFileContent: ${{ secrets.FIREBASE_TOKEN }}
+          groups: all_testers
+          file: mm_muslim_support/build/app/outputs/flutter-apk/app-release.apk
