--- a/mm_muslim_support/pubspec.yaml
+++ b/mm_muslim_support/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   flutter_local_notifications: ^18.0.1
   timezone: ^0.9.2
   android_intent_plus: ^5.3.0
+  flutter_timezone: ^4.1.0
 
 
 
