Quran PDF Implementation

--- a/mm_muslim_support/android/app/src/main/AndroidManifest.xml
+++ b/mm_muslim_support/android/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
 
 
     <application
+        android:usesCleartextTraffic="true"
+        android:hardwareAccelerated="true"
         android:label="mm_muslim_support"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
