--- a/mm_muslim_support/pubspec.yaml
+++ b/mm_muslim_support/pubspec.yaml
@@ -97,6 +97,8 @@ dev_dependencies:
   plugin_platform_interface: ^2.1.8
   path_provider_platform_interface: ^2.1.2
   image_picker_platform_interface: ^2.10.0
+  change_app_package_name: ^1.5.0
+  rename_app: ^1.6.3
 
 
 
