--- a/mm_muslim_support/pubspec.yaml
+++ b/mm_muslim_support/pubspec.yaml
@@ -75,6 +75,7 @@ dependencies:
   flutter_timezone: ^4.1.0
   pdfx: ^2.9.1
   flutter_compass: ^0.8.1
+  audioplayers: ^6.4.0
 
   just_audio: ^0.10.2
   audio_session: ^0.2.1
@@ -127,6 +128,7 @@ flutter:
   assets:
     - assets/images/
     - assets/documents/
+    - assets/audio/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
