--- a/mm_muslim_support/pubspec.yaml
+++ b/mm_muslim_support/pubspec.yaml
@@ -77,6 +77,7 @@ dependencies:
   flutter_compass: ^0.8.1
   audioplayers: ^6.4.0
   wakelock_plus: ^1.3.2
+  connectivity_plus: ^6.1.4
 
   just_audio: ^0.10.2
   audio_session: ^0.2.1
