--- a/mm_muslim_support/pubspec.yaml
+++ b/mm_muslim_support/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+3
+version: 1.0.1+4
 
 environment:
   sdk: ^3.7.0
@@ -39,36 +39,36 @@ dependencies:
   hijri: ^3.0.0
   easy_localization: ^3.0.1
   pull_to_refresh: ^2.0.0
-  go_router: ^14.1.4
-  flutter_bloc: ^8.1.6
+  go_router: ^16.2.1
+  flutter_bloc: ^9.1.1
   equatable: ^2.0.5
   shared_preferences: ^2.2.3
   flutter_svg: ^2.0.10+1
-  device_info_plus: ^10.1.1
-  google_api_availability: 5.0.0
+  device_info_plus: ^11.5.0
+  google_api_availability: ^5.0.1
   package_info_plus: ^8.0.1
-  intl: ^0.19.0
+  intl: ^0.20.2
   cryptography: ^2.7.0
   path_provider: ^2.1.4
-  firebase_core: ^3.9.0
-  firebase_messaging: ^15.1.6
+  firebase_core: ^4.1.0
+  firebase_messaging: ^16.0.1
   flutter_device_imei: ^0.0.2
   shimmer: ^3.0.0
   logger: ^2.4.0
   url_launcher: ^6.3.0
   latlong2: ^0.9.1
-  syncfusion_flutter_pdf: ^27.1.56
-  syncfusion_flutter_pdfviewer: ^27.1.56
-  permission_handler: ^11.3.1
-  syncfusion_flutter_gauges: ^27.2.2
+  syncfusion_flutter_pdf: ^31.1.18
+  syncfusion_flutter_pdfviewer: ^31.1.18
+  permission_handler: ^12.0.1
+  syncfusion_flutter_gauges: ^31.1.18
   sqflite: ^2.4.1
   path: ^1.9.0
   encrypt: ^5.0.3
   dio: ^5.8.0+1
-  firebase_crashlytics: ^4.3.5
-  firebase_analytics: ^11.4.5
-  firebase_performance: ^0.10.1+5
-  geocoding: ^3.0.0
+  firebase_crashlytics: ^5.0.1
+  firebase_analytics: ^12.0.1
+  firebase_performance: ^0.11.0+1
+  geocoding: ^4.0.0
   flutter_local_notifications: ^18.0.1
   timezone: ^0.9.2
   android_intent_plus: ^5.3.0
@@ -96,7 +96,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   # bloc test
-  bloc_test: ^9.1.7
+  bloc_test: ^10.0.0
   mockito: ^5.4.4
   build_runner:
 # For mocking file related operations
@@ -113,7 +113,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
